--- a/Hawk.ETL.Controls/DBConnectorUI.xaml
+++ b/Hawk.ETL.Controls/DBConnectorUI.xaml
@@ -16,7 +16,6 @@
         <Style    TargetType="{x:Type MenuItem}" BasedOn="{StaticResource {x:Type MenuItem}}">
             <Setter Property="Header" Value="{Binding Text}" />
             <Setter Property="Command" Value="{Binding}" />
-
             <Setter Property="ItemsSource" Value="{Binding ChildActions}" />
             <Setter Property="CommandParameter" Value="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource AncestorType={x:Type ContextMenu}, Mode=FindAncestor}}"/>
         </Style>
@@ -41,11 +40,11 @@
     
 
  
-	<Grid MinHeight="200" d:LayoutOverrides="Width">
+	<Grid d:LayoutOverrides="Width">
 
 
 
-		<ListBox x:Name="dataListBox" ToolTip="{DynamicResource key_795}"  SelectedItem="{Binding SelectedDataCollection}" MouseMove="ListBox_MouseMove_1" DataContext="{Binding PluginDictionary[DataManager]}" ItemsSource="{Binding DataCollections}" ItemTemplate="{DynamicResource DataTemplate1}" Margin="0,0,0,20">
+		<ListBox x:Name="dataListBox" x:FieldModifier="public" ToolTip="{DynamicResource key_795}" SelectionMode="Extended"  MouseMove="ListBox_MouseMove_1" DataContext="{Binding PluginDictionary[DataManager]}" ItemsSource="{Binding DataCollections}" ItemTemplate="{DynamicResource DataTemplate1}" Margin="0,0,0,20" >
 			<ListBox.Resources>
                 <ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding PluginDictionary[DataManager].Commands[2].ChildActions}"  />
 				<Style TargetType="{x:Type ListBoxItem}"  BasedOn="{StaticResource {x:Type ListBoxItem}}">
@@ -54,19 +53,14 @@
 			</ListBox.Resources>
 			<ListBox.ContextMenu>
                 <ContextMenu   ItemsSource="{Binding PluginDictionary[DataManager].Commands[3].ChildActions}"/>
-
 			</ListBox.ContextMenu>
 		</ListBox>
 		<StackPanel  DataContext="{Binding PluginDictionary[DataManager].Commands[2].ChildActions}" HorizontalAlignment="Right" Margin="0,0,4,0" Orientation="Horizontal" VerticalAlignment="Bottom">
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [3]}" />
-	
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [0]}" />
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [4]}" />
-			 
-			
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [5]}" />
-			
 		</StackPanel>
 		<Rectangle Opacity="0.2" Width="80" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="80" Margin="0,0,0,20" >
 			<Rectangle.Fill>
