--- a/Hawk.ETL.Controls/SystemStateViewer.xaml
+++ b/Hawk.ETL.Controls/SystemStateViewer.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mvvm="clr-namespace:Hawk.Core.Utils.MVVM;assembly=Hawk.Core"
-         
+          xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
              xmlns:Hawk_Core_Connectors="clr-namespace:Hawk.Core.Connectors;assembly=Hawk.Core"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
 
@@ -94,14 +94,14 @@
 				</StackPanel>
 		</DataTemplate>
 	</UserControl.Resources>
-	<Grid Margin="0" MinHeight="200" d:LayoutOverrides="Height">
+	<Grid Margin="0" MinHeight="100" d:LayoutOverrides="Height">
 		<Rectangle Width="80" Height="80" Margin="0,0,0,20" HorizontalAlignment="Right" VerticalAlignment="Bottom" Opacity="0.2" >
 			<Rectangle.Fill>
 				<VisualBrush Stretch="Fill"
 					Visual="{Binding ConverterParameter=layout, Converter={StaticResource MetroConverter}, Mode=OneWay}"  />
 			</Rectangle.Fill>
 		</Rectangle>
-		<ListBox x:Name="processListBox" ToolTip="{DynamicResource key_790}" SelectedItem="{Binding SelectedProcess}" Margin="0,0,0,20" MouseMove="processListBox_MouseMove" DataContext="{Binding PluginDictionary[DataProcessManager]}" ItemsSource="{Binding ProcessCollectionView}"  ItemTemplate="{DynamicResource DataTemplate2}"  >
+		<ListBox x:FieldModifier="public" x:Name="processListBox" ToolTip="{DynamicResource key_790}"  Margin="0,0,0,20" MouseMove="processListBox_MouseMove" DataContext="{Binding PluginDictionary[DataProcessManager]}" ItemsSource="{Binding ProcessCollectionView}"  ItemTemplate="{DynamicResource DataTemplate2}" SelectionMode="Extended"  >
 			<ListBox.Resources>
 				<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding PluginDictionary[DataProcessManager].BindingCommands.ChildActions[4].ChildActions}"/>
 
@@ -130,8 +130,8 @@
 			  
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [5]}" />
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [0]}" />
-			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />
-			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />
+			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />  
+			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />  
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [4]}" />  
 							
 		</StackPanel>
