--- a/Hawk/Lang/DefaultLanguage.xaml
+++ b/Hawk/Lang/DefaultLanguage.xaml
@@ -37,7 +37,7 @@
         正在进行长时间任务，请等待
     </system:String>
     <system:String x:Key="ModuleMgmt">
-        模块管理
+        欢迎页面
     </system:String>
     <system:String x:Key="Source">
         来源
@@ -109,6 +109,7 @@
     </system:String>
     <system:String x:Key="NullFT_desc" xml:space="preserve">
         检查文本是否为空白符或null，常用
+
         可以过滤掉所有内容为空，或字符串全部都是空字符的情况
     </system:String>
     <system:String x:Key="DataProcessManagerUI">
@@ -489,6 +490,9 @@
     <system:String x:Key="key_712">
         {0}已经有任务在执行，为了避免副作用，请在任务管理器中取消该任务后再刷新
     </system:String>
+        <system:String x:Key="keep_old_datas">
+         加载新工程时，是否保留原工程的数据集和任务？
+    </system:String>
     <system:String x:Key="key_274">
         作者沙漠君的博客
     </system:String>
@@ -524,6 +528,9 @@
     <system:String x:Key="key_573">
         清除中间空格
     </system:String>
+     <system:String x:Key="cliptoboard">
+        内容已经复制到剪切板
+    </system:String>
     <system:String x:Key="DataProcessManager_desc">
         对算法模块实现管理和组装，但不提供界面
     </system:String>
@@ -535,6 +542,7 @@
     </system:String>
     <system:String x:Key="FolderGE_desc" xml:space="preserve">
         获取文件夹下的所有文件，拖入列为文件夹的名称
+
         可直接对文件名的筛选
     </system:String>
     <system:String x:Key="RenameTF">
@@ -572,7 +580,9 @@
     </system:String>
     <system:String x:Key="key_628" xml:space="preserve">
         检测到列表的根节点为:{0}，是否设置根节点路径？ 
+
         根节点会提取所有属性的公共部分，一般能提升抓取效率，抵抗网站改版
+        
         此操作有建议有经验用户使用，小白用户请点【否】
     </system:String>
     <system:String x:Key="key_20">
@@ -622,6 +632,7 @@
     </system:String>
     <system:String x:Key="ReadFileTextGE_desc" xml:space="preserve">
         获取文件中的全部纯文本内容
+
         注意与【读取文件数据】区别，后者为一行一条数据，前者则将所有文本（包括换行符）都看为一条数据
     </system:String>
     <system:String x:Key="IDataProcess">
@@ -641,9 +652,9 @@
     </system:String>
     <system:String x:Key="not_find_key" xml:space="preserve">
         在该网页中找不到关键字 `{0}`,可能是动态请求，
-        【是】：【{1}】，并在弹出的浏览器页面中，翻到包含该关键字的位置，必要时进行刷新
-        【否】:【不嗅探】
-        【取消】:【不再提醒】
+          【是】：【{1}】，并在弹出的浏览器页面中，翻到包含该关键字的位置，必要时进行刷新
+        - 【否】:【不嗅探】
+        - 【取消】:【不再提醒】
     </system:String>
     <system:String x:Key="rightclick_new">
         右键可新建数据源
@@ -663,7 +674,7 @@
     </system:String>
     <system:String x:Key="task_run" xml:space="preserve">
         {0}已经有任务在执行，由于调整参数，是否要取消当前任务重新执行？
-        【取消】:【不再提醒】
+        - 【取消】:【不再提醒】
     </system:String>
     <system:String x:Key="success_get" xml:space="preserve">
         已经成功获取嗅探字段！ 真实请求地址:
@@ -673,9 +684,9 @@
     </system:String>
     <system:String x:Key="fail_remind" xml:space="preserve">
         作用在列名`{0}`的 模块`{1}` 已经连续5次没有成功获取数据，可能需要重新修改参数 
-        【是】：【进入调试模式】 
-        【否】：【取消当前任务】 
-        【取消】：【不再提示】
+        - 【是】：【进入调试模式】 
+        - 【否】：【取消当前任务】 
+        - 【取消】：【不再提示】
     </system:String>
     <system:String x:Key="key_191">
         获取正文
@@ -736,6 +747,7 @@
     </system:String>
     <system:String x:Key="XPathTF2_desc" xml:space="preserve">
         可将页面中的门类，用笛卡尔交叉的模式组合起来，适合于爬虫无法抓取全部页面，但可以按分类抓取的情况。
+
         需调用 {{smartcrawler_name}} ，具体参考文档-门类枚举
         //TODO:添加更详细的介绍
         要拖入HTML文本列
@@ -787,6 +799,7 @@
     </system:String>
     <system:String x:Key="key_390">
         可填入空格分割的多个列名
+
         对本模块所在列的值相同的所有属性，分别进行按列求和
     </system:String>
     <system:String x:Key="key_8">
@@ -820,8 +833,7 @@
         安装使用说明
     </system:String>
     <system:String x:Key="key_123" xml:space="preserve">
-        当页面出现乱码时，一般是编码问题，在` {{smartcrawler_name}} `->`请求设置`->编码，切换UTF-8或GBK。
-        极个别情况才需使用其他编码
+        当页面出现乱码时，一般是编码问题，在` {{smartcrawler_name}} `->`请求设置`->编码，切换UTF-8或GBK。只有极个别情况才需使用其他编码
     </system:String>
     <system:String x:Key="key_385">
         延迟输出
@@ -858,6 +870,7 @@
     </system:String>
     <system:String x:Key="RegexFT_desc" xml:space="preserve">
         编写正则表达式来过滤文本
+
         需要列名，输入正则表达式，和其最小匹配的内容数量，即可过滤内容。
         有关正则表达式，可参考[这里](https://www.jb51.net/tools/zhengze.html)
     </system:String>
@@ -883,7 +896,10 @@
         警告信息
     </system:String>
     <system:String x:Key="DataProcessManager_name">
-        模块管理
+        欢迎页面
+    </system:String>
+     <system:String x:Key="parse_yaml_config">
+        解析yaml配置文件
     </system:String>
     <system:String x:Key="key_31">
         连接名称
@@ -909,9 +925,7 @@
     <system:String x:Key="key_751">
         其他信息
     </system:String>
-    <system:String x:Key="key_501">
-        文档列表：[{}],转换为多个数据行构成的列表；单文档：{},将结果的键值对附加到本行；{{script_mode_none}}：直接将值放入到新列
-    </system:String>
+ 
     <system:String x:Key="key_275">
         帮助
     </system:String>
@@ -977,6 +991,7 @@
     </system:String>
     <system:String x:Key="DelayTF_desc" xml:space="preserve">
         在工作流中插入延时，可休眠固定长度避免爬虫被封禁，单位为ms
+
         在不同的位置插入延时有不同的行为，例如在模块A之前插入延时，则A模块每次执行前都会延时固定长度。
         除了拖入延时，在`{{serial_mode}}`下填入延时时间，则会在每个web请求前插入指定的延时，更加方便。
     </system:String>
@@ -1009,8 +1024,8 @@
     </system:String>
     <system:String x:Key="HtmlTF_desc" xml:space="preserve">
         删除HTML标签和转义符号
-        当页面包含HTML时，一些字符可能已经被转义了，例如空格成了`nsbp%`
-        拖入到对应的列，即可将转义符号恢复为之前的表示
+
+        当页面包含HTML时，一些字符可能已经被转义了，例如空格成了`nsbp%`。拖入到对应的列，即可将转义符号恢复为之前的表示
 
         注意:
 
@@ -1054,6 +1069,7 @@
     </system:String>
     <system:String x:Key="SmartCrawler_manual_mode" xml:space="preserve">
         ### 手动模式
+
         在{{TODO}}不能工作或不符合预期时，需要手工给定几个关键字， 让Hawk搜索关键字， 并获取在网页中所在的位置(XPath)。
         填入{{key_764}，能够成功获取XPath, 编写属性名称，点击{{}}，即可添加一个属性。类似地，再填入30535，设置属性名称为“单价”，即可添加另外一个属性。
 
@@ -1097,7 +1113,6 @@
 
         ### {{script_mode_list}下的手气不错
         一般来说，输入网址加载页面后，点击{{feellucky}}即可，Hawk会自动按照优先级将列表数据抓取出来
-
         ![手气不错配置](https://images2018.cnblogs.com/blog/287060/201805/287060-20180506160854095-924772830.png)
 
         左右切换选择你想要的数据集，之后在下面的属性栏对结果进行微调。
@@ -1153,7 +1168,10 @@
         为了能获取父节点下所有的div子节点，因此列表根路径就是`/html/div[2]/div[3]/div[4]/div`。 注意：父节点Path路径末尾是不带序号的，这样才能获取多个子节点。可以这么理解，列表根路径就是不带结尾数字的父节点路径。
 
         有时候，父节点的xpath是不稳定的，举个例子，北京上海的二手房页面，上海会在列表上面增加一个广告banner，从而真正的父节点就会发生变化，比如向后偏移了`div[1]变成了div[2]`。为了应对这种变化，通常的做法是手工修改【列表根路径】
-        ### 手动设置根路径 继续举例子，父节点的id为`house_list`，且在网页中全局唯一，你就可以使用另外一种父节点表示法`//*[@id='house_list']/li`（写法可以参考其他XPath教程），而子节点表达式不变。这样会让程序变得更加鲁棒。
+        
+        ### 手动设置根路径 
+        
+        继续举例子，父节点的id为`house_list`，且在网页中全局唯一，你就可以使用另外一种父节点表示法`//*[@id='house_list']/li`（写法可以参考其他XPath教程），而子节点表达式不变。这样会让程序变得更加鲁棒。
     </system:String>
     <system:String x:Key="xpath_desc" xml:space="preserve">
         ### XPath
@@ -1328,10 +1346,11 @@
         插入数据失败
     </system:String>
     <system:String x:Key="SplitPageTF_desc" xml:space="preserve">
-        根据总页数和每页数量进行分页操作，拖入列为总页数。 相比于使用Python转换器，可极大地简化操作
-        早期版本的Hawk中，若希望对网页进行分页，需要拖入多个模块才能实现，非常繁琐。
-        本模块在输入数量数，每页数量和起始值之后，即可自动创建步进整数。
-        例如总数量270, 每页数量为20，起始值为1，则生成的列为1，2，3..14
+        根据总页数和每页数量进行分页操作，拖入列为总页数。 相比于使用Python转换器，可极大地简化操作。注意：
+
+        - 早期版本的Hawk中，若希望对网页进行分页，需要拖入多个模块才能实现，非常繁琐。
+        - 本模块在输入数量数，每页数量和起始值之后，即可自动创建步进整数。
+        - 例如总数量270, 每页数量为20，起始值为1，则生成的列为1，2，3..14
     </system:String>
     <system:String x:Key="key_689">
         弹出样例
@@ -1371,6 +1390,7 @@
     </system:String>
     <system:String x:Key="FileManager_desc" xml:space="preserve">
         提供与本地文件交互的数据服务
+
         本连接器将数据表模拟为数据库，并提供像数据库一样的操作。 支持以下几种文件类型：
         
     </system:String>
@@ -1384,10 +1404,11 @@
         访问
     </system:String>
     <system:String x:Key="TransTF_desc">
-        从当前语言翻译为目标语言
+        从当前语言翻译为目标语言(调用百度API)
     </system:String>
     <system:String x:Key="XPathTF_desc" xml:space="preserve">
         通过XPath或CSS选取html中的子节点文档
+
         当输入的单元格内容为html文档，而又想提取其部分数据，用 {{smartcrawler_name}} 又`杀鸡用牛刀`，则可以考虑使用它。
         {{xpath_desc}}
 
@@ -1585,6 +1606,7 @@
     </system:String>
     <system:String x:Key="RangeFT_desc" xml:space="preserve">
         从数值列中筛选出从最小值到最大值范围的文档
+
         可以填写最大值和最小值，只有本列的值处在该范围内的文档可被留下。若该单元格的内容不是数字，则会被忽略。
     </system:String>
     <system:String x:Key="key_357">
@@ -1643,6 +1665,12 @@
     </system:String>
     <system:String x:Key="key_681">
         拷贝模块
+    </system:String>
+     <system:String x:Key="cut_tools">
+        剪切模块
+    </system:String>
+        <system:String x:Key="paste_tools">
+        粘贴模块
     </system:String>
     <system:String x:Key="key_265">
         项目主页
@@ -1710,7 +1738,7 @@
     <system:String x:Key="AddNewTF">
         添加新列
     </system:String>
-    <system:String x:Key="CrawlerTF_desc">
+    <system:String x:Key="CrawlerTF_desc"  xml:space="preserve">
         使用 {{smartcrawler_name}} 获取网页数据，拖入的列需要为超链接
 
         {{CrawlerTF_method_get}}
@@ -1718,7 +1746,7 @@
         {{CrawlerTF_method_post}}
     </system:String>
 
-    <system:String x:Key="CrawlerTF_method_get">
+    <system:String x:Key="CrawlerTF_method_get"  xml:space="preserve">
      ### 一般的get请求
 
     一般情况下, 将从爬虫转换拖入到对应的URL列中，通过下拉菜单选择要调用的爬虫名称，即可完成所有的配置：
@@ -1732,7 +1760,7 @@
     - 早期版本的Hawk,会默认选择在`算法模块`的第一个网页采集器，但实践证明这样会导致问题，后来就取消了功能。
     </system:String>
 
-    <system:String x:Key="CrawlerTF_method_post">
+    <system:String x:Key="CrawlerTF_method_post"  xml:space="preserve">
         ### 实现post请求
 
         web请求中，有两种主要的请求类型:post和get。 使用POST能支持传输更多的数据。更多的细节，可以参考http协议的相关文档，网上汗牛充栋，这里就不多说了。
@@ -1931,7 +1959,6 @@
         1.点击右键，可以对数据集进行删除，修改名称等
         2.将数据集拖拽到下方的图标上，如拖到回收站，即可删除该模块。
         3. 双击数据集可查看模块的内容。 将数据集拖拽到数据清洗图标上，可直接对本数据集做数据清洗。
-
         ![数据集视图][http://static.zybuluo.com/buptzym/kfz2k0xfvbjtun5ah6hlxoph/QQ%E6%88%AA%E5%9B%BE20160501105734.jpg]
     </system:String>
 
@@ -1959,6 +1986,7 @@
     </system:String>
     <system:String x:Key="NumRangeFT_desc" xml:space="preserve">
         选择一定数量的行，如跳过前100行，再选取50条
+
         不需要列名，它可以跳过并选择部分文档，类似于sql语句中的skip和limit关键字。
         注意:
 
@@ -2041,6 +2069,7 @@
     </system:String>
     <system:String x:Key="JsonTF_desc" xml:space="preserve">
         从字符串转换为json（数组或字典类型）
+
         当输入字符串是Json时，可以通过Json转换器将文本转换为Json。其工作模式和{{PythonTF}}一样，此处不赘述。
         
         json转换器的转换结果，实际上是一个动态类型的python对象。例如如下json:
@@ -2140,6 +2169,7 @@
     </system:String>
     <system:String x:Key="ToListTF_desc" xml:space="preserve">
         可设置任务并行方式和参数
+
         该模块在执行时，会切分本模块前后的数据流，以前侧的数据为种子，后侧的任务为mapper执行.
 
         子线程名称和子线程数量，都支持直接写值，或使用方括号表达式来获取别的列的内容。
@@ -2158,7 +2188,16 @@
         空对象过滤器
     </system:String>
     <system:String x:Key="key_278">
-        系统设置与状态统计
+        系统设置
+    </system:String>
+        <system:String x:Key="project_set">
+        工程设置
+    </system:String>
+     <system:String x:Key="param_group">
+         参数组设置
+    </system:String>
+     <system:String x:Key="using_param_name">
+         当前参数组名称
     </system:String>
     <system:String x:Key="key_93">
         数据表列表
@@ -2187,7 +2226,7 @@
     <system:String x:Key="key_469">
         生成值
     </system:String>
-    <system:String x:Key="smartcrawler_script_mode">
+    <system:String x:Key="smartcrawler_script_mode"  xml:space="preserve">
 
         ### {{script_mode_list}}
         会输出多份文档，通常在网页的列表页中使用
@@ -2203,12 +2242,17 @@
         - 当在 {{script_mode_list}}或 {{script_mode_one}}模式，且属性数量为0时，也和 {{script_mode_none}}行为一致
     </system:String>
 
-    <system:String x:Key="etl_script_mode">
+    <system:String x:Key="etl_script_mode"  xml:space="preserve">
         ### {{script_mode_list}}
+
         {{script_mode_list_desc}}
+
         ### {{script_mode_one}}
+
          {{script_mode_one_desc}}
+
         ### {{script_mode_none}}
+
         {{script_mode_none_desc}}
     </system:String>
     <system:String x:Key="key_35">
@@ -2280,25 +2324,29 @@
         对每个子线程起的名称
     </system:String>
     <system:String x:Key="AddNew_desc">
-        为数据集{{}}，值为某固定值
+        为数据集添加新的列，值为某固定值
     </system:String>
     <system:String x:Key="MergeTF">
         合并多列
     </system:String>
     <system:String x:Key="MergeTF_format">
         形如'http:\\{0}:{1},{2}...'
-        输入列的序号为0，
-        之后的1,2分别代表【其他项】的第0和第1个值
+
+        - 输入列的序号为0，
+        - 之后的1,2分别代表【其他项】的第0和第1个值
     </system:String>
     <system:String x:Key="MergeTF_desc" xml:space="preserve">
         该模块可以将多个列合并成一个列
+
         常见的如将page合并到url中，也可以通过文件名，合并出要保存的文件的位置，是使用次数最多的模块。
+
         它的操作非常灵活，例如格式为： `format= {0}+{1}+{2}` ， 其他列为`B C`，则代表将输入列，B列和C列的内容直接拼接。
 
         - `{0}`：输入列,
         - `{1}`：`其他列`中的第0项，`{1}`代表第1项
         - `[a]`：A列中的内容
         - `{config}` : 工程全局配置中键为config的值
+
         总结来说： 方括号代表从本行的其他列，大括号可从全局配置中读取内容
         若全局配置或数据中不包含对应的内容，则该列自动为空
     </system:String>
@@ -2332,6 +2380,9 @@
     </system:String>
     <system:String x:Key="key_288">
         开始任务
+    </system:String>
+      <system:String x:Key="configset">
+        参数设置
     </system:String>
     <system:String x:Key="XPathTF2">
         门类枚举
@@ -2368,9 +2419,8 @@
     </system:String>
     <system:String x:Key="StrExtractTF_desc" xml:space="preserve">
         提取字符串中，从首串到尾串中间的文本内容
-        当文本为`CABD`时，需要获取B，而B非常长，写正则表达式提取有很大困难时，可以使用本模块。
-        此时，首串填写A，尾串填写D，则Hawk就能将B提取出来。如果勾选`包含首尾字符`，则输出`ABD`，否则只有B。
-        注意:
+
+        当文本为`CABD`时，需要获取B，而B非常长，写正则表达式提取有很大困难时，可以使用本模块。此时，首串填写A，尾串填写D，则Hawk就能将B提取出来。如果勾选`包含首尾字符`，则输出`ABD`，否则只有B。注意:
         
         - 建议A和D在文本中是唯一的，否则抽取出来的B可能并不是你想要的。
         - 该工具特别适合在抽取网页的某一特定内容时使用.
@@ -2382,9 +2432,9 @@
         删除表
     </system:String>
     <system:String x:Key="key_544" xml:space="preserve">
-        若想获取分割后的第0个元素，则填入0，获取倒数第一个元素，则填入-1 
-        可输入多个匹配编号，中间以空格分割，
-        【输出列】也需要与之一对应
+        - 若想获取分割后的第0个元素，则填入0，获取倒数第一个元素，则填入-1 
+        - 可输入多个匹配编号，中间以空格分割，
+        - 【输出列】也需要与之一对应
     </system:String>
     <system:String x:Key="key_118">
         代理配置
@@ -2460,6 +2510,7 @@
     </system:String>
     <system:String x:Key="NumberTF_desc" xml:space="preserve">
         提取当前列中出现的数值
+
         它是正则转换器的特例，它能够提取浮点或整数，也能包含正负数
     </system:String>
     <system:String x:Key="key_503">
@@ -2502,7 +2553,7 @@
         新增属性
     </system:String>
     <system:String x:Key="key_729">
-        保存的任务
+        任务市场
     </system:String>
     <system:String x:Key="key_433">
         输出列
@@ -2526,11 +2577,14 @@
         提供MongoDB交互的数据库服务
         
         ### 配置设置
+
         在安装MongoDB之后，在空白位置点右键，即可选择插入一个`MongoDB连接器`，在服务器地址，用户名和密码，数据库名称上填写所需的字段，然后点击`连
         接数据库`即可。
+        
         如果你是小白用户，用上面的方法安装了MongoDB，则数据库地址填写`127.0.0.1`(代表本地)，用户名和密码为空，数据库名称填写你想要的任何名字皆可。
 
         ### MongoDB安装
+        
         已经安装过的可以自行跳过。
         
         可以从这里下载笔者已经打包好的安装包，之后解压后，在bat脚本上点击右键，以管理员模式执行，就会默认安装到D盘上并启动服务，非常方便。
@@ -2588,7 +2642,9 @@
     </system:String>
     <system:String x:Key="RenameTF_desc" xml:space="preserve">
         对列名进行修改,常用
+
         拖入的列是要修改的列，填写`输出列`后，原始列被删除，内容转移到新列上
+
         除了手工拖入模块，也可直接在数据清洗列上的文本框中直接修改列名，按回撤提交，可达到同样效果。
     </system:String>
     <system:String x:Key="key_684">
@@ -2672,7 +2728,7 @@
         执行失败,错误信息  {0}
     </system:String>
     <system:String x:Key="key_682">
-        上移
+        将拷贝模块插入上方
     </system:String>
     <system:String x:Key="key_238">
         新建或拷贝
@@ -2859,7 +2915,7 @@
         MySQL数据库
     </system:String>
     <system:String x:Key="key_683">
-        下移
+        将拷贝模块插入下方  
     </system:String>
     <system:String x:Key="key_308">
         保存项目
@@ -2878,6 +2934,7 @@
     </system:String>
     <system:String x:Key="DeleteTF_desc" xml:space="preserve">
         删除所在列的内容
+
         删除之后，在该列的内容和所有工具就不再可见。要想修改可以在数据清洗界面左侧的模块列表里选择，修改和删除。
     </system:String>
     <system:String x:Key="SQLiteDatabase">
@@ -3090,12 +3147,10 @@
         Hawk模仿了播放器和调试器，在调试模式下有`步`的概念，例如所在位置是6/20， 则说明总共有20个模块，只生效前面6个模块。 可以通过左右单击，或直接回退到开头、末尾来进行调试。
 
         左侧显示了当前所有的模块，顺序和它们的输入输出列，双击上面的模块可对其进行配置，右键可删除，上下移动这些模块。
-
         ![上下拖拽，右键配置每一步的参数](https://images2018.cnblogs.com/blog/287060/201805/287060-20180506155928987-1522342347.png)
 
         有时为了在单步调试过程中查看模块的属性，可勾选界面右下角的`调试详情`，此时可直接显示当前模块所在的属性。本质上，单步调试只是提取了工作流的一部分进行操作。
         你可以在单步调试中，拖入新的模块。模块会自动插入在工作流中间。
-        
         ![模块数量](https://images2018.cnblogs.com/blog/287060/201805/287060-20180506160222760-1330008382.png)
     </system:String>
     <system:String x:Key="key_564">
@@ -3178,9 +3233,7 @@
     <system:String x:Key="key_235">
         浏览方式
     </system:String>
-    <system:String x:Key="key_206">
-        单文档
-    </system:String>
+ 
     <system:String x:Key="SupplierTF">
         重试补数据
     </system:String>
@@ -3255,7 +3308,7 @@
         多文档
     </system:String>
     <system:String x:Key="script_mode_one">
-        多文档
+        单文档
     </system:String>
     <system:String x:Key="script_mode_list_desc" xml:space="preserve">
         生成多条数据（文档）
@@ -3325,7 +3378,7 @@
 
         # 模块介绍
 
-        $tools_desc$
+        {{tools_desc}}
 
 
     </system:String>
